# DPNet

./: .gitignore  .gitmodules  README.md  requirements.txt
examples/: DPNet_hyperparameters.yaml  DPNet_run.py  Doppler_ScanPatterns.yaml
scripts/: DPNet_entry.sh  carla_dynabarn.py  kill_dpnet_processes.sh  load_world.py  update_file_path.py  visualization.py
src/dpnet_bridge_overlay/: CMakeLists.txt  package.xml
src/dpnet_bridge_overlay/config/: DPNet_spawn.json
src/dpnet_bridge_overlay/launch/: DPNet_bridge.launch
src/dpnet_bridge_overlay/rviz/: DPNet.rviz
src/dpnet_planner_ros/: CMakeLists.txt  package.xml
src/dpnet_planner_ros/launch/: DPNet_planner.launch
src/dpnet_planner_ros/src/: DPNet_planner.py  DTMPC.py  _dpnet_import_paths.py  action_solver.py
src/dpnet_planner_ros/src/d_kalmannet/: __init__.py  dynamics.py  network.py  predictor.py
src/dpnet_planner_ros/src/d_kalmannet/weights/: model.pt
src/dpnet_planner_ros/src/utils/: geometry_utils.py  reference_path.txt
